--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5382,12 +5382,12 @@ $min2ColWidth: 400px;
 
     @media screen and (prefers-reduced-motion: no-preference) {
       body.ltr & {
-        transition: left linear 250ms;
+        transition: left cubic-bezier(0.45, 0, 0.1, 1) 250ms;
         will-change: left;
       }
 
       body.rtl & {
-        transition: right linear 250ms;
+        transition: right cubic-bezier(0.45, 0, 0.1, 1) 250ms;
         will-change: right;
       }
     }
@@ -5490,10 +5490,10 @@ $min2ColWidth: 400px;
       z-index: 1;
 
       body.ltr & {
-        transition: right linear 250ms;
+        transition: right cubic-bezier(0.45, 0, 0.1, 1) 250ms;
       }
       body.rtl & {
-        transition: left linear 250ms;
+        transition: left cubic-bezier(0.45, 0, 0.1, 1) 250ms;
       }
     }
   }
